# dnscrypt-proxy

./: .gitignore  .travis.sh  .travis.yml  AUTHORS  COPYING  ChangeLog  DNSCRYPT-V2-PROTOCOL.txt  Makefile.am  NEWS  README-PLUGINS.markdown  README-WINDOWS.markdown  README.markdown  TECHNOTES  THANKS  android.sh  apparmor.profile.dnscrypt-proxy  autogen.sh  com.opendns.osx.DNSCryptProxy.plist  configure.ac  dnscrypt-proxy.conf  dnscrypt-proxy.service  dnscrypt-resolvers.csv  dnscrypt-resolvers.csv.minisig  dnscrypt-resolvers.csv.sig  dnscrypt.service  iphone.sh  msys.sh  org.dnscrypt.osx.DNSCryptProxy.plist  resolvers-check.sh
contrib/: Makefile.am  dnscrypt-update-resolvers.sh.in  domains-blacklist-local-additions.txt  domains-blacklist.conf  domains-whitelist.txt  generate-domains-blacklist.py  resolvers-check.sh
dist-build/: Makefile.am  android-build.sh  android.sh  ios.sh  iphone.sh  mipsel-linux-static.sh  msys.sh  msys2-win32.sh  msys2-win64.sh  osx.sh  win32-win64-xcompile.sh
dist-build/android-files/system/etc/init.d/: 99dnscrypt
dist-build/android-files/system/xbin/: dnscrypt
m4/: ax_check_compile_flag.m4
man/: dnscrypt-proxy.8  dnscrypt-proxy.8.markdown  hostip.8  hostip.8.markdown
src/: Makefile.am
src/dnscrypt-proxy/: Makefile.am  alt_arc4random.c  alt_arc4random.h  app.c  app.h  cert.c  dl.c  dl.h  dnscrypt.c  dnscrypt.h  dnscrypt_client.c  dnscrypt_proxy.h  getpwnam.h  logger.c  logger.h  options.c  pid_file.c  plugin_options.c  plugin_options.h  plugin_support.c  plugin_support.h  plugin_support_p.h  probes_dnscrypt_proxy.d  probes_no_dtrace.h  safe_rw.c  salsa20_random.c  sandboxes.c  stack_trace.c  tcp_request.c  tcp_request.h  tcp_request_p.h  udp_request.c  udp_request.h  udp_request_p.h  utils.c  utils.h  uv_helpers.c  uv_helpers.h
src/ext/: queue.h
src/hostip/: app.c  options.c
src/include/: Makefile.am
src/include/dnscrypt/: plugin.h  private.h  version.h.in
src/libevent/: arc4random.c  configure.ac  evdns.c  evutil.c
src/libevent-modified/: buffer.c  configure.ac  evdns.c  listener.c
src/libevent-modified/test/: Makefile.am
src/libevent/include/event2/: dns.h
src/libevent/test/: test-ratelim.c
src/libnacl/: dist-dirs  dist-files  do  measure-anything.c  try-anything.c
src/libnacl/cpucycles/: do  test.c
src/libnacl/crypto_auth/: try.c
src/libnacl/crypto_onetimeauth/: try.c
src/libnacl/crypto_secretbox/: try.c
src/libnacl/curvecp/: curvecpclient.c  curvecpmessage.c  curvecpprintkey.c  curvecpserver.c  nanoseconds.c  safenonce.c  socket_bind.c  socket_udp.c
src/libnacl/okcompilers/: do.in
src/libnacl/randombytes/: devurandom.c  do
src/libnacl/windows/include/: windows-quirks.h
src/libuv/: Makefile.in  config-mingw.mk  config-unix.mk  dist-dirs  dist-files  uv.gyp
src/libuv/include/uv-private/: uv-win.h
src/libuv/src/: uv-common.h
src/libuv/src/unix/: core.c  darwin.c  freebsd.c  fs.c  internal.h  linux.c  process.c  stream.c  udp.c
src/libuv/src/unix/eio/: eio.c
src/libuv/src/unix/ev/: ev.c
src/libuv/src/win/: core.c  error.c  fs.c  internal.h  tcp.c
src/libuv/test/: benchmark-pump.c  test-loop-handles.c
src/plugins/: Makefile.am
src/plugins/dowse/: Makefile.am  database.h  dnscrypt-dowse.c  dnscrypt-dowse.h  domainlist.c  dowse-to-gource.c  dowse-to-mqtt.c  dowse-to-osc.c  dowse.h  hashmap.c  ip2mac.c  log.c  redis.c
src/plugins/example/: Makefile.am  example.c
src/plugins/example-cache/: Makefile.am  example-cache.c  example-cache.h
src/plugins/example-ldns/: Makefile.am  example-ldns.c
src/plugins/example-ldns-2/: Makefile.am  example-ldns-2.c
src/plugins/example-ldns-aaaa-blocking/: Makefile.am  example-ldns-aaaa-blocking.c
src/plugins/example-ldns-blocking/: Makefile.am  example-ldns-blocking.c  fpst.c  fpst.h
src/plugins/example-ldns-forward-after-nxdomain/: example-ldns-forward-after-nxdomain.c
src/plugins/example-ldns-forwarding/: Makefile.am  example-ldns-forwarding.c
src/plugins/example-ldns-opendns-bypass/: Makefile.am  example-ldns-opendns-bypass.c
src/plugins/example-ldns-opendns-deviceid/: example-ldns-opendns-deviceid.c
src/plugins/example-ldns-opendns-parental-control/: Makefile.am  example-ldns-opendns-parental-control.c
src/plugins/example-ldns-opendns-parental-protection/: Makefile.am
src/plugins/example-ldns-opendns-set-client-ip/: example-ldns-opendns-set-client-ip.c
src/plugins/example-logging/: Makefile.am  example-logging.c
src/plugins/vendor-specific/example-ldns-opendns-deviceid/: Makefile.am
src/plugins/vendor-specific/example-ldns-opendns-set-client-ip/: Makefile.am
src/proxy/: Makefile.am  app.c  app.h  cert.c  dnscrypt.c  dnscrypt.h  dnscrypt_client.c  dnscrypt_client.h  dnscrypt_proxy.h  edns.c  logger.c  logger.h  minicsv.c  minicsv.h  options.c  plugin_options.c  plugin_support.c  plugin_support.h  plugin_support_p.h  salsa20_random.c  sandboxes.c  shims.h  simpleconf.c  simpleconf_dnscrypt.h  tcp_request.c  udp_request.c  utils.c  utils.h  windows_service.c  windows_service.h
test/: dist-dirs  dist-files
test/features/step_definitions/: dnscrypt-proxy.rb
test/features/test-dnscrypt-proxy/: forced_tcp.feature  small_udp_query.feature  tcp_fallback.feature
test/features/test-hostip/: resolve-specific.feature  resolve.feature
